objects/Survey_Invitation__c.object
<CustomObject>
    <description>Custom Survey Invitation object designed to replace the native Salesforce Surveys SurveyInvitation object. Survey Invitations represent an instance of a survey generated and sent to a user (via URL) to take.</description>
    <label>Survey Invitation</label>
    <nameField>
        <label>Survey Invitation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Survey__c record in use for this Survey Invitation.</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account record related to the survey respondent for this Survey Invitation.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passive__c</fullName>
        <description>Assigns the number value of &quot;1&quot; to this record if the response is greater than 6 or less than 9. Otherwise, the value is 0.</description>
        <formula>IF(
AND((NPS_Score__c &gt; 6),
(NPS_Score__c &lt; 9)),
1,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>The user Id of the running user taking the Survey__c for this Survey Invitation. Typically the running user will be a guest user for the experience site hosting the Survey__c.</description>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promoter__c</fullName>
        <description>Assigns a number value to this record of &quot;1&quot; if the NPS Score submitted is greater than 8. Otherwise, the value is 0.</description>
        <formula>IF(NPS_Score__c &gt; 8, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promoter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <description>Assigns a number value of &quot;1&quot; to this record if the score is less than 7. Otherwise, assigns the value of 0.</description>
        <formula>IF(NPS_Score__c &lt; 7, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <description>NPS Score of survey response associated with a Survey Invitation.</description>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Id__c</fullName>
        <description>Id of the Experience Cloud Site that the Survey Invitation was generated from.</description>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Grouping__c</fullName>
        <description>Assigns an NPS Grouping of &quot;Detractor,&quot; &quot;Passive,&quot; or &quot;Promoter&quot; based on the NPS Score range of the related Survey Question Response.</description>
        <formula>IF(
AND((NPS_Score__c &gt;= 0),
(NPS_Score__c &lt; 7)),
&quot;Detractor&quot;,
IF(
AND((NPS_Score__c &gt; 6),
(NPS_Score__c &lt; 9)),
&quot;Passive&quot;,
IF(
(NPS_Score__c &gt; 8),
&quot;Promoter&quot;,
&quot;No Score Present&quot;
)
)
)</formula>
        <label>NPS Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Safe_SF_Id__c</fullName>
        <description>Case sensitive 18 character Salesforce.com Id.</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Safe SF Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitation_Link__c</fullName>
        <description>Link generated to send respondent to survey page.</description>
        <label>Invitation Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <description>Created date for this record if it was generated via the native Salesforce Surveys solution.</description>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Survey_Invitation_Id__c</fullName>
        <description>Before the custom Survey__c object was built, Salesforce Surveys were in use. This field stores the legacy Id for the corresponding, historical Salesforce SurveyInvitation record.</description>
        <externalId>true</externalId>
        <label>Legacy Survey Invitation Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Overall_Survey_Response_Status__c</fullName>
        <description>Mapped to legacy Response Status field from the SurveyInvitation object for native Salesforce Surveys solution.</description>
        <inlineHelpText>Completed means a response to all required questions for this Survey has been submitted, otherwise, the status is Started (invitation link clicked on).</inlineHelpText>
        <label>Overall Survey Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NotStarted</fullName>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>